--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "jsonwebtoken": "9.0.0",
-    "types-joi": "^2.1.0"
+    "types-joi": "^2.1.0",
+    "mysql2": "^3.3.3"
   },
   "devDependencies": {
     "@tsconfig/node16": "1.0",
     "ts-node": "^10.9.1",
     "nodemon": "2.0.14",
     "typescript": "4.4",
-    "@types/express": "4.17.13"
+    "@types/express": "4.17.13",
+    "@types/mysql": "^2.15.21"
   }
 }
