--- a/package.json
+++ b/package.json
@@ -6,25 +6,30 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/app.ts",
-    "dev": "nodemon --watch \"./src/**\" --ext \"ts,js\" --ignore \"src/**/*.spec.ts,src/**/*.json\" --exec \"ts-node src/server.ts\""
+    "dev": "nodemon --watch \"./src/**\" --ext \"ts,js\" --ignore \"src/**/*.spec.ts,src/**/*.json\" --exec \"ts-node src/server.ts\"",
+    "db:reset": "npx -y tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sequelize": "4.28",
+    "dotenv": "^16.1.4",
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "jsonwebtoken": "9.0.0",
-    "types-joi": "^2.1.0",
-    "mysql2": "^3.3.3"
+    "sequelize": "^6.25.5",
+    "types-joi": "^2.1.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "1.0",
-    "ts-node": "^10.9.1",
-    "nodemon": "2.0.14",
-    "typescript": "4.4",
     "@types/express": "4.17.13",
-    "@types/mysql": "^2.15.21"
+    "@types/mysql": "^2.15.21",
+    "mysql2": "2.3",
+    "nodemon": "2.0.14",
+    "sequelize-cli": "6.2",
+    "ts-node": "^10.9.1",
+    "typescript": "4.4"
   }
 }
