--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "17.6.0",
     "jsonwebtoken": "9.0.0",
     "sequelize": "^6.25.5",
+    "sqlite3": "^5.1.6",
     "types-joi": "^2.1.0"
   },
   "devDependencies": {
