--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@tsconfig/node16": "1.0",
     "@types/express": "4.17.13",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mysql": "^2.15.21",
     "mysql2": "2.3",
     "nodemon": "2.0.14",
