--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/sequelize": "4.28",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "1.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.13",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mysql": "^2.15.21",
